# eip

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/agents/: eip-executor.agent.md  eip-planner.agent.md  eip-verifier.agent.md  eip-workflow.agent.md
.github/hooks/: notify-telegram.mjs  notify-telegram.test.mjs  stop-telegram.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260510_0001_create_pods.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: pods.py  reports.py
backend/app/core/: config.py
backend/app/db/: models.py  seed.py  session.py
backend/app/schemas/: base.py  pods.py  reports.py
backend/app/services/: errors.py  fixtures.py  gitlab.py  models.py  pods.py  reporting.py
backend/scripts/: seed_dev_data.py
backend/tests/: conftest.py  test_api.py  test_reporting_service.py
docs/: technical-design.md
epics/epic 1/: epic.json  issue-1.json  issue-2.json  issue-3.json
epics/epic 2/: epic.json  issue-1.json  issue-2.json  issue-3.json
epics/epic 3/: epic.json  issue-1.json  issue-2.json  issue-3.json
src/app/: globals.css  layout.tsx  page.tsx
src/components/: report-workbench.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx  tabs.tsx
src/lib/: env.ts
src/lib/backend/: client.test.ts  client.ts  route-errors.ts
src/lib/gitlab/: client.ts  fixtures.ts  report.test.ts  report.ts  (+2 more)
(+2 files in other folders)
