[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eip-backend"
version = "0.1.0"
description = "FastAPI backend for EIP GitLab reporting"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.38.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
